Consumed ScrollUpdate should not reset enabled OverscrollRefresh.

Consumed ScrollUpdate should reset OverscrollRefresh if it is awaiting
ScrollUpdateAck. However in commit 498816, it resets OverscrollRefresh
to DISABLED regardlessly. This patch fixes the regression.

Bug: 761836
Change-Id: I66a9b69233aa34f330ca50bba080e8064b86505f
Reviewed-on: https://chromium-review.googlesource.com/649706
Reviewed-by: Camille Lamy <clamy@chromium.org>
Commit-Queue: Sandra Sun <sunyunjia@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499631}
Former-commit-id: 3fbdd163f1fc94d035f8e738647dd0bd3e00a271